--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,7 @@
         {
             "label": "bun_build",
             "type": "shell",
-            "windows": {
-                "command": "bun \"./packer/packer.js\""
-            },
-            "linux": {
-                "command": "bun \"./packer/packer.js\""
-            },
+            "command": "bun ./packer/packer.js",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
@@ -19,12 +14,7 @@
         {
             "label": "node_build",
             "type": "shell",
-            "windows": {
-                "command": "node \"./packer/packer.js\""
-            },
-            "linux": {
-                "command": "node \"./packer/packer.js\""
-            },
+            "command": "node ./packer/packer.js",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
